2017-01-01  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_generate_samplepaths.m: Improve the documentation

	* utils/stk_generate_samplepaths.m: Improve the documentation.  In
	particular, warn about the case of noisy observations.

	stk_predict: Explain the Bayesian point of view

	* core/stk_predict.m: Explain the Bayesian point of view.

	Fix one-line help for overloaded STK functions

	* arrays/@stk_dataframe/stk_conditioning.m: Fix one-line help.
	* arrays/@stk_dataframe/stk_generate_samplepaths.m: Idem.
	* arrays/@stk_hrect/stk_normalize.m: Idem.
	* arrays/@stk_hrect/stk_rescale.m: Idem.
	* core/@stk_model_gpposterior/stk_isnoisy.m: Idem.
	* core/@stk_model_gpposterior/stk_predict.m: Idem.
	* core/@stk_model_gpposterior/stk_predict_leaveoneout.m: Idem.

2016-12-29  Julien Bect  <julien.bect@centralesupelec.fr>

	Polish new LOO cross-validation function

	* core/@stk_model_gpposterior/stk_predict_leaveoneout.m: Return
	residuals in a dataframe (instead of a structure).
	* core/stk_predict_leaveoneout.m: Add doc and unit tests.
	* examples/01_kriging_basics/stk_example_kb10.m: Update name of
	normalized residual field (second column of the new dataframe).
	* misc/plot/stk_plot_histnormres.m: Fix a tiny bug.

	Fix one-line help for overloaded feval functions in lm

	* lm/@stk_lm_affine/feval.m: Fix one-line help.
	* lm/@stk_lm_constant/feval.m: Idem.
	* lm/@stk_lm_cubic/feval.m: Idem.
	* lm/@stk_lm_matrix/feval.m: Idem.
	* lm/@stk_lm_null/feval.m: Idem.
	* lm/@stk_lm_quadratic/feval.m: Idem.

2016-12-15  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_model_gpposterior.m: Estimate if param has NaNs (closes ticket #40)

	* core/@stk_model_gpposterior/stk_model_gpposterior.m: Estimate
	parameters automatically if prior_model.param contains NaNs.

	@stk_model_gpposterior/disp.m: Clarify display.

	* core/@stk_model_gpposterior/disp.m: Clarify display.

	@stk_model_gpposterior: Make all properties read-only.
